--- a/produtcs.html
+++ b/produtcs.html
@@ -31,148 +31,148 @@
     <div class="ourproducts">
         <h2 class="ourtxt">our</h2>
         <div class="hexagon">
-                <h2>Produtcs</h2>
+            <h2>Produtcs</h2>
         </div>
     </div>
 
 
 
-            <div class="items">
+    <div class="items" id="queryitems">
 
-                <div class="out">
-                    <img src="img/cabbage.jpg" alt="lol"><br>
-                    <h3>Fresh Cabbage</h3><br>
-                    <p> Rs.30--Rs.40</p><br>
-                    <span><img src="img/stars.png" alt="lol"></span><br>
-                    <input type="button" value="Add to Cart"><br>
+        <div class="out">
+            <img src="img/cabbage.jpg" alt="lol"><br>
+            <h3>Fresh Cabbage</h3><br>
+            <p> Rs.30--Rs.40</p><br>
+            <span><img src="img/stars.png" alt="lol"></span><br>
+            <input type="button" value="Add to Cart"><br>
+        </div>
+
+        <div class="out">
+            <img src="img/brocoli.jpg" alt="lol"><br>
+            <h3>Fresh Brocoli</h3><br>
+            <p>Rs.185--Rs.190</p><br>
+            <span><img src="img/stars.png" alt="lol"></span><br>
+            <input type="button" value="Add to Cart"><br>
+        </div>
+
+        <div class="out">
+            <img src="img/onion.png" alt="lol"><br>
+            <h3>Fresh Onion</h3><br>
+            <p>Rs.40--Rs.70</p><br>
+            <span><img src="img/stars.png" alt="lol"></span><br>
+            <input type="button" value="Add to Cart"><br>
+        </div>
+
+        <div class="out">
+            <img src="img/oil.jpg" alt="lol"><br>
+            <h3>Food Oil</h3><br>
+            <p>Rs.160--Rs.180</p><br>
+            <span><img src="img/stars.png" alt="lol"></span><br>
+            <input type="button" value="Add to Cart"><br>
+        </div>
+
+        <div class="out">
+            <img src="img/potato.jpg" alt="lol"><br>
+            <h3>Fresh Potato</h3><br>
+            <p>Rs.30--Rs.30</p><br>
+            <span><img src="img/stars.png" alt="lol"></span><br>
+            <input type="button" value="Add to Cart"><br>
+        </div>
+
+        <div class="out">
+            <img src="img/lemon.jpg" alt="lol"><br>
+            <h3>Fresh Lemon</h3><br>
+            <p>Rs.30--Rs.30</p><br>
+            <span><img src="img/stars.png" alt="lol"></span><br>
+            <input type="button" value="Add to Cart"><br>
+        </div>
+
+        <div class="out">
+            <img src="img/orange.jpg" alt="lol"><br>
+            <h3>Fresh Orange</h3><br>
+            <p>Rs.40--Rs.60</p><br>
+            <span><img src="img/stars.png" alt="lol"></span><br>
+            <input type="button" value="Add to Cart"><br>
+        </div>
+
+        <div class="out">
+            <img src="img/berry.jpg" alt="lol"><br>
+            <h3>Fresh Berry</h3><br>
+            <p>Rs.30--Rs.30</p><br>
+            <span><img src="img/stars.png" alt="lol"></span><br>
+            <input type="button" value="Add to Cart"><br>
+        </div>
+
+        <div class="out">
+            <img src="img/avocado.jpg" alt="lol"><br>
+            <h3>Fresh Avocado</h3><br>
+            <p>Rs.30--Rs.30</p><br>
+            <span><img src="img/stars.png" alt="lol"></span><br>
+            <input type="button" value="Add to Cart"><br>
+        </div>
+    </div>
+
+    <div class="wholefoot">
+        <footer class="foot">
+
+            <div class="footbasket">
+                <div class="logo2">
+                    <h2>MyGrocery</h2>
+                    <span><i class="ri-shopping-basket-2-fill"></i></span>
                 </div>
-
-                <div class="out">
-                    <img src="img/brocoli.jpg" alt="lol"><br>
-                    <h3>Fresh Brocoli</h3><br>
-                    <p>Rs.185--Rs.190</p><br>
-                    <span><img src="img/stars.png" alt="lol"></span><br>
-                    <input type="button" value="Add to Cart"><br>
-                </div>
-
-                <div class="out">
-                    <img src="img/onion.png" alt="lol"><br>
-                    <h3>Fresh Onion</h3><br>
-                    <p>Rs.40--Rs.70</p><br>
-                    <span><img src="img/stars.png" alt="lol"></span><br>
-                    <input type="button" value="Add to Cart"><br>
-                </div>
-
-                <div class="out">
-                    <img src="img/oil.jpg" alt="lol"><br>
-                    <h3>Food Oil</h3><br>
-                    <p>Rs.160--Rs.180</p><br>
-                    <span><img src="img/stars.png" alt="lol"></span><br>
-                    <input type="button" value="Add to Cart"><br>
-                </div>
-
-                <div class="out">
-                    <img src="img/potato.jpg" alt="lol"><br>
-                    <h3>Fresh Potato</h3><br>
-                    <p>Rs.30--Rs.30</p><br>
-                    <span><img src="img/stars.png" alt="lol"></span><br>
-                    <input type="button" value="Add to Cart"><br>
-                </div>
-
-                <div class="out">
-                    <img src="img/lemon.jpg" alt="lol"><br>
-                    <h3>Fresh Lemon</h3><br>
-                    <p>Rs.30--Rs.30</p><br>
-                    <span><img src="img/stars.png" alt="lol"></span><br>
-                    <input type="button" value="Add to Cart"><br>
-                </div>
-
-                <div class="out">
-                    <img src="img/orange.jpg" alt="lol"><br>
-                    <h3>Fresh Orange</h3><br>
-                    <p>Rs.40--Rs.60</p><br>
-                    <span><img src="img/stars.png" alt="lol"></span><br>
-                    <input type="button" value="Add to Cart"><br>
-                </div>
-
-                <div class="out">
-                    <img src="img/berry.jpg" alt="lol"><br>
-                    <h3>Fresh Berry</h3><br>
-                    <p>Rs.30--Rs.30</p><br>
-                    <span><img src="img/stars.png" alt="lol"></span><br>
-                    <input type="button" value="Add to Cart"><br>
-                </div>
-
-                <div class="out">
-                    <img src="img/avocado.jpg" alt="lol"><br>
-                    <h3>Fresh Avocado</h3><br>
-                    <p>Rs.30--Rs.30</p><br>
-                    <span><img src="img/stars.png" alt="lol"></span><br>
-                    <input type="button" value="Add to Cart"><br>
+                <p class="footitems">Our Store Provide Best Quality Of <br> Grocery In Cheap Rate.</p>
+                <div class="box">
+                    <button class="eachbox"><i class="ri-facebook-fill"></i></button>
+                    <button class="eachbox"><i class="ri-twitter-fill"></i></button>
+                    <button class="eachbox"><i class="ri-instagram-fill"></i></button>
+                    <button class="eachbox"><i class="ri-linkedin-box-fill"></i></button>
                 </div>
             </div>
 
-            <div class="wholefoot">
-                <footer class="foot">
 
-                    <div class="footbasket">
-                        <div class="logo2">
-                            <h2>MyGrocery</h2>
-                            <span><i class="ri-shopping-basket-2-fill"></i></span>
-                        </div>
-                        <p class="footitems">Our Store Provide Best Quality Of <br> Grocery In Cheap Rate.</p>
-                        <div class="box">
-                            <button class="eachbox"><i class="ri-facebook-fill"></i></button>
-                            <button class="eachbox"><i class="ri-twitter-fill"></i></button>
-                            <button class="eachbox"><i class="ri-instagram-fill"></i></button>
-                            <button class="eachbox"><i class="ri-linkedin-box-fill"></i></button>
-                        </div>
-                    </div>
-
-
-                    <div class="iconcolor">
-                        <h2>Contact Info</h2>
-                        <p><i class="ri-phone-fill"></i>&nbsp;+91 7367089724</p>
-                        <p><i class="ri-phone-fill"></i>&nbsp;+91 6288051045</p>
-                        <p><i class="ri-mail-fill"></i>&nbsp;Mygrocery@gmail.com</p>
-                        <p><i class="ri-map-pin-2-fill"></i>&nbsp;Dehradun, Uttrakhand- 248007</p>
-                    </div>
-
-
-                    <div class="iconcolor">
-                        <h2>Quick Links</h2>
-                        <p><b><i class="ri-arrow-right-line"></i></b><a href="index.html"> Home</a></p>
-                        <p><b><i class="ri-arrow-right-line"></i></b><a href="#"> Features</a></p>
-                        <p><b><i class="ri-arrow-right-line"></i></b><a href="produtcs.html"> Produtcs</a></p>
-                        <p><b><i class="ri-arrow-right-line"></i></b><a href="#"> Categories</a></p>
-                        <p><b><i class="ri-arrow-right-line"></i></b><a href="#"> Review</a></p>
-                        <p><b><i class="ri-arrow-right-line"></i></b><a href="#"> Blogs</a></p>
-                    </div>
-
-
-                    <div>
-                        <h2>Quick Links</h2>
-                        <p>Subscribe For Latest Updates</p>
-                        <div>
-                            <input class="search" type="text" placeholder="your email">
-                        </div>
-                        <div>
-                            <input class="subscribe" type="button" value="Subscribe">
-                        </div>
-                        <div>
-                            <a href="#"><img class="visa" src="img/visa.png"></a>
-                            <a href="#"><img class="american" src="img/American-Express-logo.png"></a>
-                            <a href="#"><img class="master" src="img/mastercard.jpeg"></a>
-                            <a href="#"><img class="discover" src="img/discover.webp"></a>
-                        </div>
-                    </div>
-
-                </footer>
-
-                <hr>
-
-                <h4>All Rights Reserved</h4>
+            <div class="iconcolor">
+                <h2>Contact Info</h2>
+                <p><i class="ri-phone-fill"></i>&nbsp;+91 7367089724</p>
+                <p><i class="ri-phone-fill"></i>&nbsp;+91 6288051045</p>
+                <p><i class="ri-mail-fill"></i>&nbsp;Mygrocery@gmail.com</p>
+                <p><i class="ri-map-pin-2-fill"></i>&nbsp;Dehradun, Uttrakhand- 248007</p>
             </div>
+
+
+            <div class="iconcolor">
+                <h2>Quick Links</h2>
+                <p><b><i class="ri-arrow-right-line"></i></b><a href="index.html"> Home</a></p>
+                <p><b><i class="ri-arrow-right-line"></i></b><a href="#"> Features</a></p>
+                <p><b><i class="ri-arrow-right-line"></i></b><a href="produtcs.html"> Produtcs</a></p>
+                <p><b><i class="ri-arrow-right-line"></i></b><a href="#"> Categories</a></p>
+                <p><b><i class="ri-arrow-right-line"></i></b><a href="#"> Review</a></p>
+                <p><b><i class="ri-arrow-right-line"></i></b><a href="#"> Blogs</a></p>
+            </div>
+
+
+            <div>
+                <h2>Quick Links</h2>
+                <p>Subscribe For Latest Updates</p>
+                <div>
+                    <input class="search" type="text" placeholder="your email">
+                </div>
+                <div>
+                    <input class="subscribe" type="button" value="Subscribe">
+                </div>
+                <div>
+                    <a href="#"><img class="visa" src="img/visa.png"></a>
+                    <a href="#"><img class="american" src="img/American-Express-logo.png"></a>
+                    <a href="#"><img class="master" src="img/mastercard.jpeg"></a>
+                    <a href="#"><img class="discover" src="img/discover.webp"></a>
+                </div>
+            </div>
+
+        </footer>
+
+        <hr>
+
+        <h4 class="arr">All Rights Reserved</h4>
+    </div>
 </body>
 
 </html>
