Quick Links --> Newsletter

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 
             <div>
-                <h2>Quick Links</h2>
+                <h2>Newsletter</h2>
                 <p>Subscribe For Latest Updates</p>
                 <div>
                     <input class="search" type="text" placeholder="your email">
